--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,33 @@
-body {
+ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    background-color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0000;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.loader-container {
+  margin-top: 30px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100px; /* Ajusta el tamaño según tus necesidades */
+  height: 100px; /* Ajusta el tamaño según tus necesidades */
+}
+.custom-progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('./sable-luke.png'); /* Ruta a tu imagen */
+  background-size: cover;
+
+
 }
